kubernetes_patterns/hands_on/6.5_pod_affinity.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: random-generator
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchLabels:
            confidential: high
          topologyKey: security-zone
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAntiAffinityTerm:
          labelSelector:
            matchLabels:
              confidential: none
            topologyKey: kubernetes.io/hostname
containers:
- image: k8spatterns/random-generator:1.0
  name: random-generator
