kubernetes_patterns/hands_on/12.1_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-generator
spec:
  selector:
    app: random-generator
ports:
- port: 80
  targetPort: 8080
  protocol: TCP
