kubernetes_patterns/hands_on/12.3_external_service_without_selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
