kubernetes_patterns/hands_on/12.5_service_with_external_destination.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  type: ExternalName
  externalName: my.database.example.com
  ports:
  - port: 80
