kubernetes_patterns/hands_on/12.6_node_port_service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: random-generator
spec:
  type: NodePort
  selector:
    app: random-generator
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30036
    protocol: TCP
