kubernetes_patterns/hands_on/12.7_load_balancer_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-generator
spec:
  type: LoadBalancer
  clusterIP: 10.0.171.239
  loadBalancerIP: 78.11.24.19
  selector:
    app: random-generator
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
status:
  loadBalancer:
    ingress:
      - ip: 18.11.24.18
