kubernetes_patterns/hands_on/12.8_simple_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: random-generator
spec:
  backend:
    serviceName: random-generator
    servicePort: 8080
